--- a/Node_Module/package.json
+++ b/Node_Module/package.json
@@ -9,6 +9,7 @@
   "author": "Group 1",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "sha256": "^0.2.0"
   }
 }
