--- a/Node_Module/package.json
+++ b/Node_Module/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "node_module",
-  "version": "1.0.0",
-  "description": "Service provider module",
+  "name": "service_provider",
+  "version": "2.0.0",
+  "description": "A module for service providers",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Group 1",
+  "author": "Group 1 - transientvania",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.9",
+    "express": "^4.16.3",
     "mysql": "^2.15.0",
     "sha256": "^0.2.0"
   }
