--- a/Node_Module/package.json
+++ b/Node_Module/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mysql": "^2.15.0",
     "sha256": "^0.2.0"
   }
