--- a/Node_Module/package.json
+++ b/Node_Module/package.json
@@ -13,7 +13,9 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "path": "^0.12.7",
     "sha256": "^0.2.0"
   }
 }
