--- a/Node_Module/package.json
+++ b/Node_Module/package.json
@@ -13,9 +13,12 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "multer": "^1.3.0",
+    "multer-sftp": "^0.2.0",
     "mysql": "^2.15.0",
     "path": "^0.12.7",
+    "request": "^2.87.0",
     "sha256": "^0.2.0"
   }
 }
